src/test/deca/context/valid/ContextSansObjet/Unitaire/printlnAllTypes.deca
//Description:
//  affichage de tous les types affichables
//
//Résultat:
//  3
//  3.5
//  Hello, world!


{
	println(3);
	println(3.5);
	println("Hello, world!");
}
