src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/EqStringBool.deca
//Description:
//  Vérification contextuelle de == avec des types incompatibles (boolean, string)
//
//Résultat:
//  Erreur contextuelle
//  ligne 10 : types non compatibles pour faire la comparaison
{
    boolean x = true;
    x == "true" ;
}